[package]
name = "rust_bench"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rb"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "socks"] }
tokio = { version = "1.40", features = ["full"] }
anyhow = "1.0"
colored = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
